# stryx-cli

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  build.bat  pyproject.toml  scan_results.json  stryx-report.html  stryx-scan.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: DOCS.md  USAGE.md
examples/: example_config.yaml  sample_report.md
stryx/: __init__.py  cli.py  orchestrator.py
stryx/ai/: __init__.py  attack_planner.py  payload_generator.py  prompts.py  providers.py
stryx/attacks/: __init__.py  attack_chain.py  replay.py
stryx/auth/: __init__.py  session_manager.py
stryx/comparison/: __init__.py  differ.py
stryx/config/: __init__.py  default_config.yaml  loader.py  schema.py
stryx/crawler/: __init__.py  discovery.py  graphql_discovery.py  html_crawler.py  js_endpoints.py  openapi.py  sitemap.py
stryx/payloads/: cmdi.txt  header_injection.txt  ldap.txt  nosqli.txt  open_redirect.txt  path_traversal.txt  sqli.txt  ssrf.txt  ssti.txt  xss.txt  xxe.txt
stryx/plugins/: __init__.py  base.py
stryx/policy/: __init__.py  engine.py
stryx/reports/: __init__.py  generator.py  json_report.py  markdown_report.py  sarif_report.py  terminal_report.py
stryx/reports/templates/: report.html.j2
stryx/scanners/: __init__.py  auth.py  authorization.py  blind.py  cloud_ssrf.py  cors.py  dependencies.py  disclosure.py  fuzz.py  graphql.py  injection.py  race.py
stryx/signatures/: framework_fingerprints.yaml  known_vulns.yaml
stryx/utils/: __init__.py  evidence.py  http_client.py  logging.py  rate_limiter.py
tests/: test_auth_scanner.py  test_authorization_scanner.py  test_config.py  test_crawler.py  test_e2e.py  test_fuzz.py  test_injection_scanner.py  test_report_generator.py
tests/fixtures/: mock_target_app.py
