[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stryx-cli"
version = "0.1.2"
description = "AI-Powered Dynamic Application Security Testing (DAST) -- part of the MEDUSA security platform"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Akhilesh Varma", email = "akhverm@gmail.com"},
]
keywords = [
    "security",
    "dast",
    "dynamic-analysis",
    "vulnerability-scanner",
    "penetration-testing",
    "web-security",
    "api-security",
    "owasp",
    "sast",
    "application-security",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Networking",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1,<9",
    "rich>=13.0,<14",
    "httpx[socks]>=0.25,<1",
    "pydantic>=2.0,<3",
    "pyyaml>=6.0,<7",
    "jinja2>=3.1,<4",
    "openai>=1.0,<2",
    "anthropic>=0.25,<1",
    "groq>=0.4,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "respx>=0.21",
]
xml = [
    "lxml>=4.9,<6",
]
all = [
    "stryx[xml]",
]

[project.scripts]
stryx = "stryx.cli:main"

[project.urls]
Homepage = "https://github.com/Medusa-Security/stryx"
Repository = "https://github.com/Medusa-Security/stryx"
Issues = "https://github.com/Medusa-Security/stryx/issues"
Documentation = "https://github.com/Medusa-Security/stryx/blob/main/docs/USAGE.md"
Changelog = "https://github.com/Medusa-Security/stryx/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["stryx*"]

[tool.setuptools.package-data]
stryx = [
    "py.typed",
    "payloads/*.txt",
    "signatures/*.yaml",
    "signatures/*.yml",
    "config/*.yaml",
    "config/*.yml",
    "reports/templates/*.j2",
    "reports/templates/*.html",
]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
